Unique album/song commands